# uv-copier

./: README.md  copier.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
docs/: development.md  ide.md  integrations.md
template/: .dockerignore  .pre-commit-config.yaml  Dockerfile.jinja  README.md.jinja  docker-compose.yml.jinja  pyproject.toml.jinja  {% if ci == 'gitlab' %}.gitlab-ci.yml{% endif %}.jinja
template/.devcontainer/: devcontainer.json.jinja
template/{% if ci == 'github' %}.github{% endif %}/workflows/: test.yml.jinja  {% if use_app %}push_to_ghcr.yml{% endif %}  {% if use_push_ecr %}push_to_ecr.yml{% endif %}
testing/: pyproject.toml
testing/tests/: __init__.py  conftest.py  test_django.py  test_fastapi.py  test_gradio.py  test_package.py  test_streamlit.py  utils.py
