[project]
# Run pytest: uv run -m pytest
# Run ty: uv run ty check
name = "uv-copier-tests"
version = "0.0.1"
description = "A test suite for the uv copier template"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "copier>=9.2.0",
    "deepdiff>=8.6.1",
    "pre-commit>=4.1.0",
    "pytest>=8.1.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.2",
    "ty>=0.0.19",
]

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
line-length = 120
src = ["tests"]
target-version = "py314"
force-exclude = true  # https://docs.astral.sh/ruff/settings/#force-exclude
preview = true  # https://docs.astral.sh/ruff/preview/

[tool.ruff.lint]  # https://github.com/charliermarsh/ruff
select = ["A", "ASYNC", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "EM", "ERA", "F", "FBT", "FLY", "FURB", "G", "I", "ICN", "INP", "INT", "ISC", "LOG", "N", "NPY", "PERF", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "SLF", "SLOT", "T10", "T20", "TCH", "TID", "TRY", "UP", "W", "YTT"]
extend-safe-fixes = ["TID252"]  # https://docs.astral.sh/ruff/settings/#extend-safe-fixes
ignore = ["D203", "D213", "FBT001", "E501", "EM101", "EM102", "ISC001", "RET504", "S101", "TRY003", "W505"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]  # https://docs.astral.sh/ruff/settings/#unfixable

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --verbosity=2 --junitxml=reports/pytest.xml"
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["tests"]
xfail_strict = true
log_cli = true
log_file_level = "info"
